trying to read from yml files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#logging.file.path=.
 
+#logging.file.path=./denemelogNEW/
+
+#logging.file.path=/var/log/spring_boot/
+logback.rollingpolicy.file-name-pattern=./merhabadunya-%d{yyyy-MM-dd}.%i.gz
+spring.output.ansi.enabled=ALWAYS
