--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>merhabadunya</name>
 	<description>First project for Spring Boot</description>
 	<properties>
-		<java.version>16.0.1</java.version>
+		<java.version>16</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,6 +49,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>2.14.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.14.1</version>
+			</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.session</groupId>-->
 <!--			<artifactId>spring-session-data-redis</artifactId>-->
@@ -91,7 +101,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<version>${project.parent.version}</version> 				<configuration>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
